--- a/regression/regression.ipynb
+++ b/regression/regression.ipynb
@@ -72,6 +72,36 @@
   },
   {
    "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(12288, 45)"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a=np.random.randn(12288,150)\n",
+    "b=np.random.randn(150,45)\n",
+    "c=np.dot(a,b)\n",
+    "c.shape\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-17T15:40:17.908587Z",
+     "start_time": "2024-03-17T15:40:17.775648Z"
+    }
+   },
+   "id": "acdbbc6bed22502a",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [
     "# Step 1: Load the dataset\n",
